<resources>
    <string name="app_name">Shopping List</string>
    <string name="new_list">Create a new list</string>
    <string name="description">
        Welcome to the Shopping List application.\n
        This app was created to make everyday life easier.\n
        In today\'s world, we have very little to time to enjoy,\n and shopping does\'t belong to them \n
        I decided to make it easier.\n
        Now you can create, share and fulfill your shopping list\n
        You are welcome</string>
    <string name="buttonNameW">enter</string>
    <string name="add_list">Your list\'s name</string>
    <string name="add">add</string>
    <string name="name">name</string>
    <string name="noItem">You don\'t have any shopping list</string>
    <string name="noProduct">You don\'t have any product</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="selectAll">Select all</string>
    <string name="delete">Delete</string>
    <string name="money">€</string>
    <string name="edit">Save</string>
    <string name="oneMore">Press one more time to close</string>
    <string name="sendTo">Send to</string>
    <string name="open">Open</string>
    <string name="emptyListName">The list name cannot be empty.</string>
    <string name="sendingOption">How would you like to send list?</string>
    <string name="asFile">As a file</string>
    <string name="asText">As a text</string>
    <string name="registerForm">Register form</string>
    <string name="Login">Login</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="repassword">repeat password</string>
    <string name="register">register</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="alreadyRegistered">Already have an account? Login</string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="emailVerification">Email verification</string>
    <string name="resendEmail">Resend email</string>
    <string name="signOut">Sign out</string>
    <string-array name="Unit">
        <item>Gram</item>
        <item>Dag</item>
        <item>Kilo</item>
        <item>Litre</item>
        <item>Bottle</item>
        <item>Pcs</item>
    </string-array>
    <string name="confirmed">Already have confirmed?</string>
    <string name="Verified">Verified</string>
    <string name="noVerified">No verified</string>
    <string name="successfullyVerified">Successfully verified, you are sign in</string>
    <string name="resetPassword">Reset password</string>
    <string name="resetForm">Enter email to reset password</string>
    <string name="noNet">You don\'t have the Internet connection</string>
    <string name="noUser">There is no user record corresponding to this email</string>
    <string name="emailReset">Email send</string>
    <string name="Retry">Retry</string>
    <string name="fatalError">Something went wrong, please contact with developer.</string>
    <string name="wrongEmail">Incorrect email address</string>
    <string name="send">Send</string>
    <string name="Success">Successfully log in</string>
    <string name="errorWithLogin">Something went wrong, please try again</string>
    <string name="firstLogin">You need to be logged in.</string>
    <string name="Reset">Reset</string>
    <string name="unitButelka">Bottle</string>
    <string name="uploaded">Uploaded</string>
    <string name="emptyEmail">Email cannot be empty</string>
    <string name="InvalidPassword">Invalid email or password</string>
    <string name="emptyEmailPassword">Email or password field is empty</string>
    <string name="invalidPassword">The given password is invalid. Password should be at least 6 characters</string>
    <string name="notSamePassword">Passwords are not the same</string>
    <string name="wrongEmailFormation">The email address is badly formatted</string>
    <string name="EmailSend">Email sent</string>
    <string name="needLogin">You need to be logged in</string>
    <string name="noList">There is no list for you</string>
    <string name="Logging">Logging</string>
    <string name="Sending">Sending</string>
    <string name="Registering">Registering</string>
    <string name="EmailChecking">Email validation</string>
    <string name="download">Dowloading</string>
    <string name="comeBack">Welcome back </string>
    <string name="exists">List with this name already exists</string>
    <string name="errorWithGoogle">Something went wrong, please try again</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="askMerge">List with this name already exist, would you like to merge them?</string>
    <string name="alreadyBought">This item is already bought</string>
    <string name="nothingSelected">Nothing is selected</string>
</resources>
