<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:layout_weight="1"
    android:gravity="center">

    <TextView
        android:id="@+id/sendingType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendingOption"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/asFile"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:stateListAnimator="@null"
        android:textColor="@color/white"
        android:text="@string/asFile" />

    <Button
        android:id="@+id/asText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_rounded"
        android:stateListAnimator="@null"
        android:text="@string/asText"
        android:textColor="@color/white" />
</LinearLayout>