<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:layout_weight="1"
    android:orientation="vertical">


    <Button
        android:id="@+id/addB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded"
        android:stateListAnimator="@null"/>

    <EditText
        android:id="@+id/nameP"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bottom_line"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_line"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameP" />

    <EditText
        android:id="@+id/price"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bottom_line"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <Spinner
        android:id="@+id/unit"
        style="@style/myStyle"
        android:backgroundTint="@color/black"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/amount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/valuePer"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/money"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/price"
        app:layout_constraintVertical_bias="0.333" />

</android.support.constraint.ConstraintLayout>